fix: heading widget is now centered even though the parent windows becomes too small on resize

--- a/src/VideoComponents/css/overlay.css
+++ b/src/VideoComponents/css/overlay.css
@@ -13,8 +13,8 @@ img {
 }
 
 #canvasHeading {
-  left: 0;
-  right: 0;
+  left: -9999px;
+  right: -9999px;
   margin: auto;
 }
 
